--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -2,6 +2,7 @@ include README.rst
 include INSTALL.rst
 include LICENSE
 include MANIFEST.in
+include ez_setup.py
 recursive-include docs *
 recursive-include projector/locale *
 recursive-include projector/media *
