--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -3,6 +3,7 @@ include INSTALL.rst
 include LICENSE
 include MANIFEST.in
 include ez_setup.py
+include requirements.txt
 recursive-include docs *
 recursive-include projector/locale *
 recursive-include projector/media *
