--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,8 @@
-Djalog==0.9.2.stable
-Django==1.2-beta-1
-Jinja2==2.3.1
+Djalog==0.9.3
 Pygments==1.3.1
 Sphinx==0.6.5
 Sphinx-PyPI-upload==0.2.1
-django-admin-tools==0.1.2
+django-admin-tools==0.2.0
 django-annoying==0.7.4
 django-attachments==0.3.1
 django-authority==0.4
@@ -13,11 +11,8 @@ django-filter==0.5.3
 django-notification==0.1.5
 django-pagination==1.0.5
 django-registration==0.7
-django-rosetta==0.5.3
--e git+git://github.com/lukaszb/django-sorting.git#egg=django_sorting-0.1
+-e git+git://github.com/lukaszb/django-sorting.git#egg=django_sorting-forked
 django-tagging==0.3.1
 docutils==0.6
-enum==0.4.4
-ipython==0.10
 mercurial==1.5
 wsgiref==0.1.2
