Little fix at setup.cfg

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,8 +1,8 @@
 [build_sphinx]
 source-dir = docs/
-build-dir  = docs/_build
+build-dir  = docs/build
 all_files  = 1
 
 [upload_sphinx]
-upload-dir = docs/_build/html
+upload-dir = docs/build/html
 
