--- a/requirements.txt
+++ b/requirements.txt
@@ -7,10 +7,12 @@ django-annoying==0.7.4
 django-attachments==0.3.1
 django-authority==0.4
 django-extensions==0.4.1
+django-keyedcache==1.4-1
 django-filter==0.5.3
 django-notification==0.1.5
 django-pagination==1.0.5
 django-registration==0.7
+django-signals-ahoy==0.1-1
 -e git+git://github.com/lukaszb/django-sorting.git#egg=django_sorting-forked
 django-tagging==0.3.1
 docutils==0.6
