--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ Sphinx-PyPI-upload==0.2.1
 django-admin-tools==0.2.0
 django-attachments==0.3.1
 django-authority==0.4
+django-autoslug>=1.4.1
 django-devserver==0.0.3
 django-extensions==0.4.1
 django-keyedcache==1.4-1
@@ -13,7 +14,7 @@ django-filter==0.5.3
 django-notification==0.1.5
 django-pagination==1.0.7
 django-registration==0.7
-django-signals-ahoy==0.1-1
+django-signals-ahoy
 -e git+git://github.com/lukaszb/django-sorting.git#egg=django_sorting-forked
 -e hg+http://bitbucket.org/lukaszb/django-livesettings#egg=django-livesettings
 django-tagging==0.3.1
