--- a/requirements.txt
+++ b/requirements.txt
@@ -19,6 +19,7 @@ django-registration==0.7
 django-signals-ahoy
 -e git+git://github.com/lukaszb/django-sorting.git#egg=django_sorting-forked
 django-tagging==0.3.1
+django-treebeard==1.61
 docutils==0.6
 mercurial>=1.5
 wsgiref==0.1.2
