--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,12 @@
 Django>=1.2
 Djalog>=0.9.4
 Pygments==1.3.1
+celery==2.0.1
 django-admin-tools==0.3.0
 django-autoslug>=1.4.1
+django-celery==2.0.0
 django-extensions==0.5
+django-gravatar==0.1.0
 django-guardian==0.1.0
 django-keyedcache==1.4-1
 django-filter==0.5.3
@@ -15,5 +18,5 @@ django-signals-ahoy
 -e git+git://github.com/lukaszb/django-sorting.git#egg=django_sorting-forked
 django-treebeard==1.61
 docutils==0.7
-mercurial>=1.5
+mercurial>=1.6
 wsgiref==0.1.2
