--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,25 @@
-Django>=1.2
-Djalog>=0.9.4
+Django==1.2.3
+Djalog==0.9.4
 Pygments==1.3.1
 celery==2.0.1
 django-admin-tools==0.3.0
-django-autoslug>=1.4.1
+django-autoslug==1.4.1
 django-celery==2.0.0
+django-celery-email==0.1.1
 django-extensions==0.5
 django-gravatar==0.1.0
 django-guardian==0.1.0
 django-keyedcache==1.4-1
 django-filter==0.5.3
-django-native-tags==0.4
+django-native-tags==0.5
 django-notification==0.1.5
 django-pagination==1.0.7
 django-registration==0.7
+django-richtemplates==0.3.5
 -e git+git://github.com/lukaszb/django-sorting.git#egg=django_sorting-forked
 django-treebeard==1.61
 docutils==0.7
-mercurial>=1.6
+ghettoq==0.4.4
+mercurial==1.6.3
 wsgiref==0.1.2
--e hg+http://bitbucket.org/marcinkuzminski/vcs/@27cd5cce30c96924232dffcd24178a07ffeb5dfc#egg=vcs-tip
+vcs==0.1.5
