--- a/.hgignore
+++ b/.hgignore
@@ -16,6 +16,7 @@ dist
 .pydevproject
 
 example_project/media
+example_project/projects
 example_project/conf/*settings*.py
 example_project/celerybeat-schedule
 projector/plugins
