--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
 Django==1.2.3
 Djalog==0.9.4
 Pygments==1.3.1
-celery==2.0.1
+celery==2.0.3
 django-admin-tools==0.3.0
 django-autoslug==1.4.1
-django-celery==2.0.0
+django-celery==2.0.2
 django-celery-email==0.1.1
 django-extensions==0.5
 django-gravatar==0.1.0
@@ -15,11 +15,12 @@ django-native-tags==0.5
 django-notification==0.1.5
 django-pagination==1.0.7
 django-registration==0.7
-django-richtemplates==0.3.5
+django-richtemplates==0.3.6
 -e git+git://github.com/lukaszb/django-sorting.git#egg=django_sorting-forked
 django-treebeard==1.61
 docutils==0.7
+dulwich==0.6.1
 ghettoq==0.4.4
 mercurial==1.6.3
 wsgiref==0.1.2
-vcs==0.1.5
+vcs==0.1.7
